--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,9 +28,9 @@ body {
 }
 
 header {
-    height: 10rem;
+    height: 13rem;
     width: 100%;
-    padding: 1.2rem 1.4rem;
+    padding: 1.4rem 1.9rem;
     display: flex;
     flex-direction: column;
 
@@ -47,40 +47,40 @@ header #menu-icon::before,
 header #menu-icon::after {
     position: absolute;
     content: "";
-    width: 1.5rem;
-    height: 2px;
+    width: 2.2rem;
+    height: 3px;
     background-color: hsla(341, 71%, 41%, 1);
     border-radius: 999px;
 }
 
 header #menu-icon {
-    top: 17px;
+    top: 18px;
 }
 
 header #menu-icon::before {
-    margin-top: 4px;
+    margin-top: 6px;
 }
   
 header #menu-icon::after {
-    margin-top: 8px;
-    width: .8rem;
+    margin-top: 12px;
+    width: 1rem;
 }
 
 span#weekday {
     display: block;
-    margin-left: 2.7rem;
+    margin-left: 3.7rem;
 
     font-family: 'Sora';
     font-style: normal;
     font-weight: 700;
-    font-size: 1.5rem;
-    line-height: 1.9rem;
+    font-size: 1.8rem;
+    line-height: 2.3rem;
     text-align: center;
 }
 
 .icons {
-    width: 9.2rem;
-    height: 2rem;
+    width: 10.6rem;
+    height: 2.4rem;
     display: flex;
     justify-content: space-between;
 }
@@ -89,12 +89,12 @@ span#weekday {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 1.8rem;
+    margin-top: 3.2rem;
 }
 
 .calendar-days .day {
-    width: 3.2rem;
-    height: 3.8rem;
+    width: 4rem;
+    height: 4.6rem;
 
     display: flex;
     justify-content: center;
@@ -103,6 +103,10 @@ span#weekday {
     
     background: var(--primary-bg-color);
     border-radius: 12px;
+}
+
+.calendar-days .day.select {
+    background: #D52059;
 }
 
 .calendar-days .day span:nth-child(even) {
