--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,7 +30,7 @@ body {
 header {
     height: 13rem;
     width: 100%;
-    padding: 1.4rem 1.9rem;
+    padding: 1.8rem 2rem;
     display: flex;
     flex-direction: column;
 
@@ -89,7 +89,7 @@ span#weekday {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 3.2rem;
+    margin-top: 2.4rem;
 }
 
 .calendar-days .day {
@@ -121,4 +121,17 @@ span#weekday {
     font-size: 10px;
     line-height: 13px;
     text-align: center;
+}
+
+button {
+    width: 50px;
+    height: 50px;
+    position: fixed;
+
+    bottom: 30px;
+    right: 20px;
+
+    background: #D52059;
+    border-radius: 12px;
+    border: none;
 }
