--- a/src/css/style.css
+++ b/src/css/style.css
@@ -81,6 +81,7 @@ header #menu-icon::after {
 
 .menu-open {
     position: absolute;
+    left: -10px;
     height: 100vh;
     width: 10px;
     background-color: var(--primary-bg-color);
